<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    tools:context=".FragmentA">


    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/podaj_ciag_1_2_3"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonInsertion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonInsertion"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="36dp"
        android:onClick="insertionSort"
        android:text="@string/sortowanie_przez_wstawianie"
        app:layout_constraintBottom_toTopOf="@+id/buttonBubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/buttonBubble"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="148dp"
        android:onClick="bubbleSort"
        android:text="@string/sortowanie_b_belkowe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsertion" />
</androidx.constraintlayout.widget.ConstraintLayout>